welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:11: error: type mismatch;
 found   : Unit
 required: Boolean
      if (x=0) {y=y-1} else {x=x+1}
           ^Diagonal:12: error: missing arguments for method estBord in class Diagonal;
follow this method with `_' if you want to treat it as a partially applied function
      while (!estBord) {x=x-1;y=y-1}
              ^Diagonal:29: error: not found: value x2
  return ((x==x2)||(y==y2)||(x==0)||(y=0))
              ^Diagonal:29: error: not found: value y2
  return ((x==x2)||(y==y2)||(x==0)||(y=0))
                       ^Diagonal:29: error: reassignment to val
  return ((x==x2)||(y==y2)||(x==0)||(y=0))
                                      ^