welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.code
var diag = 0;
override def run() {
  var x=0
  var y=0
  val x2=getMondeLargeur()
  val y2=getMondeHauteur()
  var cmpt=0
  while (!arrive()) {
    ecritMessage(cmpt)
    if (!estBord(x,y)) {x=x+1;y=y+1}
    else {
      if (x=0) {y=y-1} else {x=x+1}
      while (!estBord) {x=x-1;y=y-1}
    }
    setPos(x,y)
    cmpt=cmpt+1
  }
  ecritMessage(cmpt)
}

def arrive ():Boolean ={
  val x=getX()
  val y=getY()
  val x2=getMondeLargeur()
  val y2=getMondeHauteur()
  return ((x==x2-1)&&(y==y2-1))
}

def estBord (x:Int,y:Int):Boolean ={
  return ((x==x2)||(y==y2)||(x==0)||(y=0))
}